--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/string.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/string.xml
@@ -98,6 +98,8 @@
     <string name="rank_overall">മൊത്തത്തിലുള്ള റാങ്ക്:</string>
     <string name="monthly">പ്രതിമാസ സ്കോർ</string>
     <string name="earnings">വരുമാനം</string>
+    <string name="Earnings">വരുമാനം</string>
+
     <string name="rides_taken">എടുത്ത റൈഡുകൾ</string>
     <string name="rides_missed">മിസ്ഡ് റൈഡുകൾ</string>
     <string name="rides_cancelled">റദ്ദാക്കിയ  റൈഡുകൾ</string>
@@ -226,6 +228,8 @@
     <string name="please_contact_customer_care">ഞങ്ങളുടെ കസ്റ്റമർ കെയരുമായി ബന്ധപ്പെടുക</string>
     <string name="paid_cash">പണമായി അടക്കേണ്ടത് </string>
     <string name="ride_id">റൈഡ് ഐഡി</string>
+    <string name="Ride_id">റൈഡ് ഐഡി</string>
+
     <string name="rupees">രൂപ .</string>
     <string name="ride_time2">റൈഡ് സമയം :</string>
     <string name="rate">നിരക്ക് :</string>
@@ -250,5 +254,165 @@
     <string name="app_need_active_gps">അപ്ലിക്കേഷൻ സജീവമാകാൻ  ജിപിഎസ് കണക്ഷൻ ആവശ്യമാണ്. സെറ്റിങ്ങ്സിൽ  നിന്ന് അത് ഓൺ ചെയ്യു .</string>
     <string name="app_needs_network_time">അപ്ലിക്കേഷൻ സജീവമാകാൻ  നെറ്റ്‌വർക്ക് കൊടുക്കുന്ന ടൈം ആവശ്യമാണ്. സെറ്റിങ്ങ്സിൽ  നിന്ന് അത് ഓൺ ചെയ്യു .</string>
     <string name="take">വാങ്ങുക </string>
+
+
+    <string name="req_accepted_by_other_driver">ഈ അഭ്യർത്ഥന മറ്റൊരു ഡ്രൈവർ അംഗീകരിച്ചു</string>
+    <string name="amount_entered">എന്റർ ചെയ്ത തുകയാണ് </string>
+    <string name="time">സമയം </string>
+    <string name="time_new">പുതിയ സമയം </string>
+    <string name="jugnoo_ride_over">ജുഗ്നൂ  റൈഡ് അവസാനിച്ചു.</string>
+    <string name="today">ഇന്ന്</string>
+    <string name="this_month">ഈ മാസം</string>
+    <string name="title">തലക്കെട്ട്</string>
+    <string name="two_account_on_device">രണ്ട് അക്കൗണ്ടുകൾ ഇതിനകം ഈ ഉപകരണത്തിൽ സൃഷ്ടിച്ചിട്ടുണ്ട്</string>
+    <string name="total_fare">മുഴുവൻ നിരക്ക് </string>
+    <string name="updating">അപ്ഡേറ്റുചെയ്യുന്നു ...</string>
+    <string name="user_cancel_request">ഉപയോക്താവ് അഭ്യർത്ഥന റദ്ദാക്കി</string>
+    <string name="verification">പരിശോധന</string>
+    <string name="verify_me">വെരിഫൈ ചെയ്യു </string>
+    <string name="waiting_for_location">ലൊക്കേഷൻ കാത്തിരിക്കുന്നു ...</string>
+    <string name="wait">കാത്തിരിക്കുക </string>
+    <string name="whatsapp_not_installed">വാട്ട്‌സാപ്പ് ഇൻസ്റ്റാൽ ചെയ്തിട്ടില്ല </string>
+    <string name="weekly"> പ്രതിവാരം </string>
+    <string name="will_revert_you">ഞങ്ങൾ ഉടനെ തന്നെ നിങ്ങൾക്ക് മറുപടി തരുന്നതായിരിക്കും </string>
+    <string name="cannot_add_less_than">നിങ്ങൾക്ക് ആഡ് ചെയ്യാൻ പറ്റുന്ന കുറഞ്ഞ തുക Rs</string>
+    <string name="your_position">നിങ്ങളുടെ സ്ഥാനം</string>
+    <string name="your_overall_position">നിങ്ങളുടെ മൊത്തത്തിലുള്ള സ്ഥാനം</string>
+    <string name="got_new_request">നിങ്ങൾ ഒരു പുതിയ അഭ്യർത്ഥന ലഭിച്ചിരിക്കുന്നു</string>
+    <string name="present_near_customer_location">നിങ്ങൾ വാഹനമായി എത്തിച്ചേർന്നു എന്ന്  അടയാളപ്പെടുത്താൻ കസ്റ്റമർ പിക്കപ്പ് സ്ഥലത്തിനടുത്ത് എത്തിയിരിക്കണം. </string>
+    <string name="present_near_customer_location_to_start">നിങ്ങൾക്ക് റൈഡ് ആരംഭിച്ചു എന്ന്  അടയാളപ്പെടുത്താൻ കസ്റ്റമർ പിക്കപ്പ് സ്ഥലത്തിനടുത്ത് എത്തിയിരിക്കണം. </string>
+    <string name="You_have_already_created">നിങ്ങൾ ഇതിനകം ഈ ഉപകരണത്തിൽ നിന്ന് % 1 $ d അക്കൗണ്ടുകൾ സൃഷ്ടിച്ചു . ഒരു പുതിയ അക്കൗണ്ട് സൃഷ്ടിക്കുന്നത് കാരണം വിശദീകരിക്കുക</string>
+    <string name="your_referral_code">നിങ്ങളുടെ റഫറൽ കോഡ് ആണ്</string>
+    <string name="tap_to_retry">വീണ്ടും ശ്രമിക്കുന്നതിന് ടാപ്പ് ചെയ്യുക</string>
+    <string name="error_occured_tap_to_retry">ചില പിശകുകൾ സംഭവിച്ചു.വീണ്ടും ശ്രമിക്കുന്നതിന് ടാപ്പ് ചെയ്യുക </string>
+    <string name="no_missed_rides">നിലവിൽ മിസ്ഡ് റൈഡുകൾ ഇല്ല</string>
+    <string name="no_internet_tap_to_retry">ഇന്റർനെറ്റ് കണക്ഷൻ ഇല്ല. വീണ്ടും ശ്രമിക്കുന്നതിന് ടാപ്പ്‌ ചെയ്യുക  </string>
+    <string name="no_rides">റൈഡുകൾ ഒന്നും നിലവിൽ ഇല്ല </string>
+    <string name="pickup_location">നിങ്ങളുടെ പിക്കപ്പ് സ്ഥലം</string>
+    <string name="money_to_pay">കൊടുക്കേണ്ട പണം .Rs </string>
+    <string name="money_to">ജുഗ്നൂവിനു കൊടുക്കേണ്ട പണം </string>
+    <string name="start_ride_loc">സവാരി ആരംഭിക്കേണ്ട ലൊക്കേഷൻ</string>
+    <string name="sec_left">ശേഷിക്കുന്ന നിമിഷങ്ങൾ</string>
+    <string name="km_away">കി മി ദൂരെ</string>
+    <string name="m_away">മീറ്റർ ദൂരെ </string>
+    <string name="some_error_occured">ചില പിശക് സംഭവിച്ചിരിക്കുന്നു  </string>
+    <string name="take_cash">പണം വേടിക്കുക </string>
+    <string name="wallet">വാല്ലെറ്റ് </string>
+    <string name="Scheduled_Ride_Pickup">ഷെഡ്യൂൾ ചെയ്ത  റൈഡ് പിക്കപ്പ്:</string>
+    <string name="referral_msg">എന്റെ കോഡ്  %1$s ഉപയോഗിച്ചു ജുഗ്നൂ കസ്റ്റമർ അപ്പ് ഡൌൺലോഡ് ചെയ്യു ജുഗ്നൂ കാഷ് ഈറൻ ചെയ്യു.എവിടെ നിന്ന് അത് ഡൌൺലോഡ് ചെയ്യു \nhttp://smarturl.it/jugnoo</string>
+    <string name="no_of_account">അക്കൗണ്ടുകൾ ഇതിനകം ഈ ഉപകരണത്തിൽ സൃഷ്ടിച്ചിട്ടുണ്ട്</string>
+    <string name="enter_otp_received">ദയവായി SMS വഴി വെറും ലഭിച്ച ഒറ്റ തവണ പാസ്സ്‌വേർഡ്‌ (OTP ) എന്റർ ചെയ്യുക </string>
+    <string name="select_reason">ഒരു കാരണം തിരഞ്ഞെടുക്കുക</string>
+    <string name="referral_money">റെഫറൽ മണി</string>
+    <string name="send">അയയ്ക്കുക</string>
+    <string name="wait_here">ഇവിടെ കാത്തിരിക്കുക...</string>
+    <string name="use_jugnoo_fare">ജുഗ്നൂ യാത്രാചിലവ് ഉപയോഗിക്കു </string>
+    <string name="view_account">അക്കൗണ്ട് കാണാൻ </string>
+    <string name="hint_created_multiple_account">നിങ്ങൾ ഇതിനകം ഈ ഉപകരണത്തിൽ നിന്ന് 2 അക്കൗണ്ടുകൾ സൃഷ്ടിച്ചു . ഒരു പുതിയ അക്കൗണ്ട് സൃഷ്ടിക്കുന്നത്തിന്റെ  കാരണം വിശദീകരിക്കുക</string>
+    <string name="convenience_charge">കൺവീനിയൻസ് ചാർജ്  </string>
+    <string name="inc_subsidy">(inc. സബ്സിഡി)</string>
+    <string name="to_end">ഇതിലേക്ക്:</string>
+    <string name="Edit_profile">പ്രൊഫൈൽ എഡിറ്റ്‌ ചെയ്യാൻ </string>
+    <string name="info">ഇൻഫോ </string>
+    <string name="local_leaderboard">തദ്ദേശ</string>
+    <string name="global_leaderboard">ആഗോള</string>
+    <string name="daily_leaderboard">ദിവസേന</string>
+    <string name="weekly_leaderboard">പ്രതിവാര</string>
+    <string name="lb_rank">റാങ്ക് </string>
+    <string name="lb_name">പേര്</string>
+    <string name="lb_no_downloads">ഡൗൺലോഡുകളുടെ എണ്ണം</string>
+    <string name="number_of_downloads">ഡൗൺലോഡുകളുടെ എണ്ണം</string>
+    <string name="number_of_first_rides">എടുത്ത ആദ്യത്തെ റൈഡ്കളുടെ എണ്ണം</string>
+    <string name="money_earned">റഫറല്സ് വഴി നേടിയ പണം</string>
+    <string name="data_effective_format">*  പ്രാബല്യത്തിൽ ഉള്ള ഡാറ്റ </string>
+    <string name="notifications">നോട്ടിഫിക്കേഷൻ സെന്റെർ </string>
+    <string name="click_for_direction">ദിശകൾ ഇവിടെ ക്ലിക്ക് ചെയ്യുക </string>
+    <string name="time_left">ശേഷിക്കുന്ന സമയം</string>
+    <string name="enter_phone_no_to_reset_password">നിങ്ങളുടെ പാസ്വേഡ് പുനഃസജ്ജീകരിക്കുന്നതിനുള്ള രജിസ്റ്റർ ചെയ്ത ഫോൺ നമ്പർ നൽകുക</string>
+    <string name="customer_phone_number">കസ്റ്റമർ ഫോൺ നമ്പർ</string>
+    <string name="recharge_amount">റീചാർജ് ചെയ്യേണ്ട തുക</string>
+    <string name="enter_amount">തുക നൽകുക</string>
+    <string name="paytm_recharge">Paytm റീചാർജ്</string>
+    <string name="Confirm">കൺഫേം </string>
+    <string name="Paytm_recharge">Paytm റീചാർജ്</string>
+    <string name="phone_number_or_email">ഇമെയിൽ അല്ലെങ്കിൽ മൊബൈൽ നമ്പർ </string>
+    <string name="nl_otp_waiting_to_detect_otp"> OTP ക്കൂ വേണ്ടി കാത്തിരിക്കുന്നു</string>
+    <string name="battery_low_message">സവാരി സ്വീകരിക്കാൻ  ബാറ്ററി ലെവൽ 20% അധികം ആയിരിക്കണം.തടസ്സങ്ങൾ ഇല്ലാതെ  തുടരുന്നതിനായി ഉടനെ ചാർജ് ചെയ്യുക.</string>
+    <string name="Rate_Your_Customer">കസ്റ്റമർനെ റേറ്റ് ചെയ്യുക </string>
+    <string name="skip">അടുത്തതിലേക്ക് പോകുക </string>
+    <string name="destination_menu">ഡെസ്റ്റിനേഷൻ</string>
+    <string name="no_current_notification">നിലവിൽ അറിയിപ്പ് ഒന്നും ഇല്ല </string>
+    <string name="phone">ഫോൺ :</string>
+    <string name="GENERATE_OTP">OTP: ജനറേറ്റുചെയ്യുക</string>
+    <string name="otp">OTP</string>
+    <string name="signin_via_otp">OTP വഴി സൈൻ ഇൻ ചെയ്യുക </string>
+    <string name="Neutral">നിക്ഷ്പക്ഷമായ</string>
+    <string name="destination">ഡെസ്റ്റിനേഷൻസ് </string>
+    <string name="destination_selection">നിങ്ങള്ക്ക് പോകേണ്ട ലക്ഷ്യസ്ഥാനം തിരഞ്ഞെടുക്കുക </string>
+    <string name="Payments">പേയ്മെന്റുകൾ</string>
+    <string name="PAYMENTS">പേയ്മെന്റുകൾ</string>
+    <string name="Today">ഇന്നു </string>
+    <string name="Last_week">കഴിഞ്ഞ ആഴ്ച</string>
+    <string name="Last_month">കഴിഞ്ഞ മാസം</string>
+    <string name="upcoming_invoice">വരാനിരിക്കുന്ന ഇൻവോയ്സ്</string>
+    <string name="current_invoice"> നിലവിലെ ഇൻവോയ്സ്</string>
+    <string name="Outstanding_amnt">കുടിശ്ശികയായ തുക</string>
+    <string name="jugnoo_cmsn">ജുഗ്നൂ കമ്മീഷൻ</string>
+    <string name="Manual_adjustment">മാനുവൽ ക്രമീകരണം</string>
+    <string name="referral_amount">റെഫറൽ തുക</string>
+    <string name="cancel_subsidy">സബ്സിഡി റദ്ദാക്കുക</string>
+    <string name="phone_deduction">ഫോൺ കിഴിച്ചുകൊണ്ടു</string>
+    <string name="paid_by_jugnoo">ജുഗ്നൂ നൽകിയ</string>
+    <string name="paid_by_customer">പണമായി നേരിട്ട് അടച്ച തുക </string>
+    <string name="paid_using_wallet">വാലറ്റ് ഉപയോഗിക്കുന്നു അടച്ച തുക </string>
+    <string name="acc_credited">ക്രെഡിറ്റ് ആയ തുക </string>
+    <string name="last_invoice">അവസാനത്തെ  ഇൻവോയ്സ്</string>
+    <string name="last_invoice_details">അവസാന പേയ്മെന്റ് വന്നത് :</string>
+    <string name="last_payments">അവസാനത്തെ പേയ്മെന്റുകൾ</string>
+    <string name="upcoming_payment_due_date">വരാനിരിക്കുന്ന പേയ്മെന്റ് :</string>
+    <string name="cash_via_paytm">Paytm ക്യാഷ് വഴി </string>
+
+    <string name="terms">നിബന്ധനകൾ</string>
+    <string name="bank_details">ബാങ്ക് വിവരങ്ങൾ</string>
+    <string name="acc_no">അക്കൗണ്ട്‌ നമ്പർ </string>
+    <string name="ifsc_code">IFSC കോഡ്  :</string>
+    <string name="bank_name">ബാങ്കിന്റെ പേര് :</string>
+    <string name="bank_loc">ബാങ്ക് ബ്രാഞ്ച് </string>
+    <string name="customer_waiting">നിങ്ങളുടെ അടുത്ത ഉപയോക്താവ് കാത്തിരിക്കുന്നു</string>
+    <string name="show_more">കൂടുതൽ കാണിക്കുക</string>
+    <string name="Transactions">ഇടപാടുകൾ</string>
+    <string name="Invoices">ഇൻവോയിസുകൾ</string>
+    <string name="Earn">നേടുക</string>
+    <string name="Activity">പ്രവർത്തനം</string>
+    <string name="referral">റഫറൽ</string>
+    <string name="NA">ആപ്ലികേബിൾ അല്ല </string>
+    <string name="Invoice">ഇൻവോയിസ് </string>
+    <string name="recharge_amount_for_customer">നിങ്ങൾ കസ്റ്റമർ നു  \u20B9 %1$s PAYTM അക്കൗണ്ട്‌ വഴി റീചാർജ് ചെയ്യുന്ന ദിവസം %2$s</string>
+    <string name="Ride"> സവാരി </string>
+    <string name="customer_id">കസ്റ്റമർ ഐഡി</string>
+    <string name="paytm_transaction">Paytm ട്രാൻസാക്ഷൻ</string>
+    <string name="phone_no">ഫോൺ നമ്പർ</string>
+    <string name="changed_no_same_as_previous">മാറ്റിയ  ഫോൺ നമ്പർ പഴയതു  തന്നെ ആണ്</string>
+    <string name="sharing_payment_recieved">ഫോൺനു കിട്ടിയ പണം ഷെയർ ചെയ്യാൻ </string>
+    <string name="please_give_customer">നിങ്ങളുടെ ഫീഡ്ബാക്ക് ഗൌരവമായി ഞങ്ങൾ എടുക്കുന്നു .ദയവായി ഞങ്ങൾക്ക്  ഒരു റേറ്റിംഗ് തരൂ</string>
+    <string name="start_loc">ആരംഭിക്കുന്ന സ്ഥലം </string>
+    <string name="driver_loc">ഡ്രൈവറുടെ സ്ഥലം</string>
+    <string name="customer_2">കസ്റ്റമർ 2</string>
+    <string name="kms">കി മി </string>
+    <string name="mark_delivered">അടയാളപ്പെടുത്തിയതു കൈമാറി</string>
+    <string name="order_id">ഓർഡർ ഐഡി</string>
+    <string name="thanks_for_feedback">നിങ്ങളുടെ വിലപ്പെട്ട പ്രതികരണത്തിന് നന്ദി</string>
+    <string name="total_amnt_till_now">ഇതുവരെയുള്ള ആകെ തുക</string>
+    <string name="invoice_date">രസീത് തീയതി</string>
+    <string name="invoice_id">ഇൻവോയ്സ് ഐഡി</string>
+    <string name="total_distance">ആകെ ദൂരം</string>
+    <string name="valid_email_phone_no">സാധുവായ ഇമെയിൽ അല്ലെങ്കിൽ ഫോൺ നമ്പർ നൽകുക</string>
+    <string name="select_destination">കുറഞ്ഞത് ഒരു ലക്ഷ്യസ്ഥാനം എങ്കിലും  തിരഞ്ഞെടുക്കുക</string>
+    <string name="fatafat_on">ഫടാഫറ്റ് ഓൺ </string>
+    <string name="Notifications">അറിയിപ്പുകൾ</string>
+    <string name="enter_customer_phone_no">കസ്റ്റമർ ഫോൺ നമ്പർ നൽകുക</string>
+    <string name="invoice_detail">ഇൻവോയ്സ് വിശദാംശങ്ങൾ</string>
+    <string name="generated_on">തീയതി </string>
+    <string name="share">പങ്കിടുക</string>
 
 </resources>
