--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/string.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/string.xml
@@ -150,4 +150,205 @@
     <string name="enter_name">ଦଯାକରି ନାମ ଲେଖନ୍ତୁ</string>
     <string name="Pls_enter_email_or_phn">ଦଯାକରି ଇମେଲ୍ କିମ୍ବା ଫୋନ୍ ନମ୍ବର୍ ଲେଖନ୍ତୁ</string>
 
+
+
+
+
+    <string name="battery_level_start_text">ରାଇଡ୍ ସ୍ଟାର୍ଟ୍ କରିବା ପାଇଁ ଚାର୍ଜ୍ 10% ରୁ ଅଧିକ ଚାର୍ଜ୍ ରହିବା ଦରକାର୍,ଦୟାକରି ମୋବାଇଲ୍ କୁ ଚାର୍ଜ୍ କରି ରଖନ୍ତୁ</string>
+    <string name="battery_level_arrived_text">ରାଇଡ୍ ଆରାଇଭ୍ କରିବା ପାଇଁ ଚାର୍ଜ୍ 10% ରୁ ଅଧିକ ରହିବା ଦରକାର୍,ଦୟାକରି ମୋବାଇଲ୍ କୁ ଚାର୍ଜ୍ କରି ରଖନ୍ତୁ</string>
+    <string name="enter_otp">1 ଟାଇମ୍ ପାସ୍-କୋଡ୍ ପକାନ୍ତୁ</string>
+    <string name="forgot_password_cap">ପାସ୍ବାର୍ଡ଼ ଭୁଲିଯାଇଛନ୍ତି</string>
+    <string name="final_amount">ଅନ୍ତିମ ପରିମାଣ </string>
+    <string name="fare2">ଭଡା</string>
+    <string name="fare_details">ଭଡା ଫଳାଫଳ </string>
+    <string name="go_to_setting">ସେଟିଗଂ କୁ ଜାନ୍ତୁ </string>
+    <string name="google_pay_service_error_message">ଗୂଗଲ ପ୍ଲେଏ  ସରଭିସ ମିଳୁନି ଅଥବା ପୁରୁଣା ହେଇଜାଇଛି.ତେଣୁ ଦୟାକରି ଗୂଗଲ ପ୍ଲେଏ  ସରଭିସ ଡାଉନଲୋଅଡ଼ କରନ୍ତୁ.</string>
+    <string name="create_new_account_msg">ଆପଣ ଏବେ ବି ଅଉ ଏକ ନୁଆ ଆକାଉନ୍ତ ଖୋଲିବାକୁ ଚାହୁଁଛନ୍ତି କି </string>
+    <string name="loading">ଲୋଅଡ଼ ହେଉଛି </string>
+    <string name="local_position">ସ୍ତାନୀୟ ସ୍ତିତ୍ତି </string>
+    <string name="location_setting">ସ୍ତାନ ବ୍ୟବସ୍ତାପନ</string>
+    <string name="location_setting_enable_message">ଆପଣଂକର ଲୋକେସନ ମିଳୁ ନାହିଁ.ଦୟାକରି ସେଟିଗଂ ମେନୁ କୁ ଯାଇ ଲୋକେସନ ଠିକ କରିବାକୁ ଚାହୁଁଛନ୍ତି କି? </string>
+    <string name="luggage_charge">ଜିନିସର ଭଡା </string>
+    <string name="min_fare">ସର୍ବନିମ୍ନ ଭଡା ର ମୁଲ୍ୟ </string>
+    <string name="meals_on">ମିଲ୍ସ ଅନ </string>
+    <string name="mail_us">ଆମକୁ ମେଲ କରନ୍ତୁ</string>
+    <string name="message">ସମ୍ବାଦ </string>
+    <string name="no">ନା </string>
+    <string name="yes">ହଁ</string>
+    <string name="no_luggage">କୌଣସି ଜିନିସ ଯୋଡା ଯାଇ ନାହିଁ </string>
+    <string name="luggage_added"> ଜିନିସ ଜାତିୟ ବସ୍ତୁ ଯୋଡା ଯାଇଛି </string>
+    <string name="no_lugage">କିଛି ଜିନିସ ନାହିଁ  </string>
+    <string name="network_problem">ନେଟଵ୍ଵର୍କ ର ସମସ୍ୟା ଅଛି.ତେଣୁ ଦୟାକରି ଆପଣ ଅପଣଂକ ଫୋନ ଅଫ କରି ଅନ କରନ୍ତୁ ଅଉ ୫ମିନିଟ ଅପେକ୍ଷା କରନ୍ତୁ ଜୁଗନୁ ପୁନର୍ବାର ଚଲେଇବାକୁ.</string>
+    <string name="no_data_to_show">କିଛି ତଥ୍ୟ ନାହିଁ ଦେଖିବାକୁ.</string>
+    <string name="no_of_rides">ରାଇଡ଼ ର ସଂଖ୍ୟା </string>
+    <string name="overall_position">ସମୁଦାୟ ସ୍ତିତି</string>
+    <string name="of_upto_100">୧୦୦/- ଟନ୍କା ପର୍ଯନ୍ତ</string>
+    <string name="some_amount">ଦୟାକରି କିଛି ପଇସା ଲେଖନ୍ତୁ </string>
+    <string name="less_amount">ଦୟାକରି କମ ପଇସା ଲେଖନ୍ତୁ </string>
+    <string name="valid_amount">ଦୟାକରି କିଛି ବୈଧ ରାସୀ ଜମା କରନ୍ତୁ </string>
+    <string name="Phone_number_not_empty">ଫୋନ ନମ୍ବର ସ୍ତାନ ଟି ଖାଲି ରଖନ୍ତୁ ନାହିଁ  </string>
+    <string name="valid_phone_number">ଦୟାକରି ସଠିକ ଫୋନ ନମ୍ବର ଲେଖନ୍ତୁ </string>
+    <string name="enter_some_fare">ଦୟାକରି କିଛି ରାସୀ ଲେଖନ୍ତୁ </string>
+    <string name="by">ଦ୍ବାରା</string>
+    <string name="take_fare_from_customer">ଦୟାକରି ଉପରେ ଦେଖେଇଥିବା ଭଡ଼ା ପଇସା କସ୍ଟମର୍ ଠାରୁ ନିଅନ୍ତୁ</string>
+    <string name="confirm_email">ଦୟାକରି ଇ ମେଲ ଆଇଡ଼ ସୁନିସ୍ଚିତ କରନ୍ତୁ</string>
+    <string name="pls_enter_phone_number">ଦୟାକରି ଫୋନ ନମ୍ବର ଟି ଦିଅନ୍ତୁ </string>
+    <string name="enter_valid_phone_number">ଦୟାକରି ବୈଧ ଫୋନ ନମ୍ବର ଟି ଦିଅନ୍ତୁ </string>
+    <string name="enter_password">ଦୟାକରି ଗୁପ୍ତ ନମ୍ବର ଟି ଦିଅନ୍ତୁ </string>
+    <string name="pls_confirm_password">ଦୟାକରି ଗୁପ୍ତ ନମ୍ବର ଟି ସୁନିସ୍ଚିତ କରନ୍ତୁ </string>
+    <string name="password_atleast_6"> ଗୁପ୍ତ ନମ୍ବର ଟି କମ ସେ କମ ୬ ଅକ୍ଷର ର ହେବା ଦର୍କାର</string>
+    <string name="valid_email">ଦୟାକରି ବୈଧ ଇ ମେଲ ଆଇଡ଼ ଟି ଦିଅନ୍ତୁ</string>
+    <string name="password_not_match">ଗୁପ୍ତ ନମ୍ବର ଟି ମିସୁନାହିଁ </string>
+    <string name="password_to_continue">ସେବା ଟି ଚାଲୁ ରଖିବା ପାଇଁ ଗୁପ୍ତ ନମ୍ବର ଟି ଦିଅନ୍ତୁ </string>
+    <string name="enter_new_phone_number">ଦୟାକରି ନୁଆ ନମ୍ବର ଟି ଦିଅନ୍ତୁ</string>
+    <string name="position">ପଦ</string>
+    <string name="enter_phone_to_have_instruction">ଗୁପ୍ତ ନମ୍ବର ର ପୁନର୍ବାର ସେଟିନ୍ଗ ର ସୁଚନା ପାଇବା ପାଇଁ ଅପଣଂକ ଫୋଅନ ନମ୍ବର ଟି ପ୍ରଦାନ କରନ୍ତୁ </string>
+    <string name="pay">ଦେୟ </string>
+    <string name="please_login_from_these_accounts"></string>
+    <string name="please_contact_customer_care">କସ୍ଟମର୍ କେୟାର ସହ ଯୋଗା ଯୋଗ କରନ୍ତୁ </string>
+    <string name="paid_cash">କ୍ୟାସ ଦ୍ବାରା ପେମେନ୍ଟ୍ କରନ୍ତୁ </string>
+    <string name="ride_id">ରାଇଡ଼ ଆଇଡ଼</string>
+    <string name="rupees">ଟଂକା</string>
+    <string name="ride_in_progress_cant_logout">ରାଇଡ୍ ଚାଲିଛି,ଆପଣ ରାଇଡ୍ ସେଶ ହେଲାପରେ ଲଗ୍-ଆଉଟ୍ କରିପାରିବେ</string>
+    <string name="rate_applied">ଦର ର ପ୍ରୟୋଗ </string>
+    <string name="register">ରେଜିସ୍ଟର୍</string>
+    <string name="request_registration">ଅନୁରୋଧ ରେଜିସ୍ଟର୍</string>
+    <string name="reg_info">ପନ୍ଜିକରଣ ର ସୁଚନା</string>
+    <string name="ride_details">ରାଇଡ ର ବିବରଣି</string>
+    <string name="ride_fare">ରାଇଡ ର ମୁଲ୍ୟ </string>
+    <string name="can_not_calculated_distance">କ୍ଷମା କରିବେ,ବର୍ତମାନ ଅମେ ଅପଣଂକ ଦୁରତା ଅକଳନ  କରିପାରୁ ନାହୁଁ</string>
+    <string name="set">ସେଟ </string>
+    <string name="SUBMIT">ଜମା କରନ୍ତୁ  </string>
+    <string name="super_driver">ସୁପର ଡ୍ରାଇଭର</string>
+    <string name="sharing_rides">ସେୟାର ଭଡା କରନ୍ତୁ </string>
+    <string name="sharing_on">ସେୟାରିନ୍ଗ ଅନ</string>
+    <string name="SIGN_UP">ସାଇନ ଅପ </string>
+    <string name="submit_request">ରିକୁଏସ୍ଟ ଜମା କରନ୍ତୁ </string>
+    <string name="status">ସ୍ତିତି</string>
+    <string name="total_time">ସର୍ବମୋଟ ସମୟ</string>
+    <string name="min">ମିନିଟ</string>
+    <string name="app_need_active_gps">ଆପଲିକେସନ କୁ ସଠିକ ଜିପିଏସ କନେକସନ ଦରକାର ହେଉଛି.ସେଟିନ୍ଗ କୁ ଜାଇ ଠିକ କରନ୍ତୁ </string>
+    <string name="app_needs_network_time">ଆପ୍ଲିକେସନ୍ କୁ ନେଟ୍-ଓର୍କ ପ୍ରଦାନ କରାଜାଇଥିବା ସମୟ ସକ୍ଷମ ହେବାପାଇଁ ଦରକାର୍ ହେଉଛି,ଦୟାକରି ସେଟିଂଗ୍ କୁ ଜାଆନ୍ତୁ</string>
+    <string name="take">ନେବା  </string>
+    <string name="req_accepted_by_other_driver">ଏହି ରେକୁଏସ୍ଟ ଟି ଅନ୍ୟ କୌଣସି ଡ୍ରାଇଭର ଦ୍ବାରା ଆକସେପଟ ହୋଇଜାଇଛି</string>
+    <string name="amount_entered">ଜମା ହୋଇଥିବା ମୁଲ୍ୟ ହେଉଛି</string>
+    <string name="time">ସମୟ  </string>
+    <string name="jugnoo_ride_over">ବର୍ତମାନ ଅପଣଣ୍କର ଜୁଗ୍ଣୁ ରାଇଡ ଶେସ ହେଲା </string>
+    <string name="today">ଆଜି</string>
+    <string name="this_month">ଏହି ମାସ </string>
+    <string name="title">ଟାଇଟେଲ୍</string>
+    <string name="two_account_on_device">ପୁର୍ବରୁ ଏହି ଡିଭାଇସ୍ ରେ ଦୁଇଟି ଆକାଉଂଟ୍ ଖୋଲା ହୋଇଛି</string>
+    <string name="total_fare">ସମୁଦାୟ ମୁଲ୍ୟ</string>
+    <string name="updating">ଅପ୍-ଡେଟ୍ ଚାଲୁଅଛି</string>
+    <string name="user_cancel_request">ଉପଭୋକ୍ତା ରିକୁଏସ୍ଟ୍ ଟିକୁ କ୍ୟାନସଲ୍ କରିଦେଇଛନ୍ତି</string>
+    <string name="verification">ଜାଂଚ୍ କରିବା</string>
+    <string name="verify_me">ମୋତେ ଜାଂଚ୍ କରନ୍ତୁ</string>
+    <string name="waiting_for_location">ଲୋକେସନ୍ ପାଇଁ ଅପେଖ୍ୟା କରନ୍ତୁ</string>
+    <string name="wait">ଅପେକ୍ଷା</string>
+    <string name="whatsapp_not_installed">ହ୍ଵଟସାପ୍ ଇନ୍-ସ୍ଟଲ୍ ହେଇନାହିଁ</string>
+    <string name="weekly">ସପ୍ତାହିକ</string>
+    <string name="will_revert_you">ଅମେ ଶିଘ୍ର ହିଁ ଅପଣନ୍କୁ ସୁଚନା ଦେବୁ</string>
+    <string name="cannot_add_less_than">ଅପଣ ଏହି ମୁଲ୍ୟ...ଠାରୁ କମ୍ ରାସି ଜମା କରି ପରିବେ ନାହିଁ</string>
+    <string name="your_position">ଅପଣଂକ ସ୍ତିତି ରେ</string>
+    <string name="your_overall_position">ଅପଣଂକ ସମ୍ପୁର୍ନ୍ନ ସ୍ତିତି </string>
+    <string name="got_new_request">ଅପଣଂକୁ ଆଉ ଏକ ନୁଅ ରିକୁଏସ୍ଟ୍ ମିଳିଲା </string>
+    <string name="present_near_customer_location">ରାଇଡ ରେ ଆରାଇଭ୍ କରିବାକୁ ହେଲେ କସ୍ଟମର୍ ର ପିକପ୍ ଲୋକେସନ୍ ରେ ପହଂନଚିବାକୁ ପଡିବ</string>
+    <string name="present_near_customer_location_to_start">ରାଇଡ କୁ ସ୍ଟାର୍ଟ୍ କରିବାକୁ ହେଲେ କସ୍ଟମର୍ ର ପିକପ୍ ଲୋକେସନ୍ ରେ ପହଂନଚିବାକୁ ପଡିବ</string>
+    <string name="You_have_already_created">ଆପଣ ପୁର୍ବରୁ ଏହି ଡିଭାଇସ୍ ରେ % ଆକାଉନ୍ଟ୍ କ୍ରିଏଟ୍ କରି ସାରିଛନ୍ତି.ଆଉ ଏକ ନୁଅ ଆକାଉନ୍ଟ କ୍ରିଏଟ୍ କରିବାକୁ ହେଲେ ତାହା କାରଣ ବର୍ଣ୍ଣନା କରନ୍ତୁ</string>
+    <string name="your_referral_code">ଅପଣଂକ ରେଫରାଲ୍ କୋଡ୍ ହେଉଛି</string>
+    <string name="tap_to_retry">ପୁନର୍ବାର ଚେସ୍ଟା କରିବାକୁ ଅପଣଂକ ଫୋନ୍ ର ସ୍କ୍ରିନ୍ କୁ ଛୁଅନ୍ତୁ</string>
+    <string name="error_occured_tap_to_retry">କିଛି ତ୍ରୁଟି ହୋଇଛି.ପୁନର୍ବାର ଚେସ୍ଟା କରିବାକୁ ଅପଣଂକ ଫୋନ୍ ର ସ୍କ୍ରିନ୍ କୁ ଛୁଅନ୍ତୁ</string>
+    <string name="no_missed_rides">ବର୍ତମାନ୍ ପର୍ଜନ୍ତ ମୁଁ କୌଣସି ରାଇଡ ମିସ୍ କରିନହିଁ</string>
+    <string name="no_internet_tap_to_retry">ଇନ୍ଟରନେଟ୍ କନେକ୍ସନ୍ ନହିଁ.ପୁନର୍ବାର ଚେସ୍ଟା କରିବାକୁ ଅପଣଂକ ଫୋନ୍ ର ସ୍କ୍ରିନ୍ କୁ ଛୁଅନ୍ତୁ</string>
+    <string name="no_rides">ବର୍ତମାନ ସୁଧା କୌଣସି ରାଇଡ ନହିଁ</string>
+    <string name="pickup_location">ଅପଣଂକ ପିକପ୍ ଲୋକେସନ୍</string>
+    <string name="money_to_pay"></string>
+    <string name="money_to">ଜୁଗ୍ନୁ ର ମୁଲ୍ୟ </string>
+    <string name="start_ride_loc">ରଇଡ ଆରମ୍ଭ ର ଲୋକେସନ </string>
+    <string name="sec_left">ସେକେଣ୍ଡ୍ ରହିଲା</string>
+    <string name="km_away">କି.ମି ଦୁର</string>
+    <string name="m_away">ମି ଦୁର</string>
+    <string name="some_error_occured">କିଛି ତ୍ରୁଟି ହୋଇ ଜାଇଛି</string>
+    <string name="take_cash">କ୍ୟସ୍ ନିଅନ୍ତୁ</string>
+    <string name="wallet">ବଲେଟ୍</string>
+    <string name="referral_msg">ମୋ କୋଡ଼ ୟୁଜ କରି ଜୁଗ୍ନୁ ଆପ ଡାଉନଲୋଡ କରନ୍ତୁ ଅଉ ଜୁଗ୍ନୁ କ୍ୟାସ ପାନ୍ତୁ.ଏହି ଲିନ୍କ୍ ୟୁଜ କରି ଡାଉନଲୋଡ କରନ୍ତୁ            http://smarturl.it/jugnoo          </string>
+    <string name="no_of_account">ପୁର୍ବରୁ ଏହି ଡିଭାଇସ ରେ ଆକାଉଣ୍ଟ୍ କ୍ରୀଏଟ ହୋଇ ସାରିଛି</string>
+    <string name="select_reason">ଦୟାକରି କୌଣସି ଏକ କାରଣ ଦର୍ସାନ୍ତୁ </string>
+    <string name="referral_money">ରେଫରାଲ ରାସୀ</string>
+    <string name="send">ପଠାଇବା </string>
+    <string name="wait_here">ଏଠାରେ ଅପେକ୍ଷା କରନ୍ତୁ...... </string>
+    <string name="use_jugnoo_fare">ଜୁଗ୍ନୁ ରାସୀ ବ୍ୟବହାର କରନ୍ତୁ </string>
+    <string name="view_account">ଆକାଉଣ୍ଟ୍ ଦେଖନ୍ତୁ</string>
+    <string name="hint_created_multiple_account">ଆପଣ ପୁର୍ବରୁ ଏହି ଡିଭାଇସ୍ ରେ ଦୁଇଟି ଆକାଉନ୍ଟ୍ କ୍ରିଏଟ୍ କରି ସାରିଛନ୍ତି.ଆଉ ଏକ ନୁଅ ଆକାଉନ୍ଟ କ୍ରିଏଟ୍ କରିବାକୁ ହେଲେ ତାହା କାରଣ ବର୍ଣ୍ଣନା କରନ୍ତୁ</string>
+    <string name="lb_name">ନାମ</string>
+    <string name="Confirm">ନିସ୍ଚିତ</string>
+    <string name="Paytm_recharge">ପେଟିଏମ ରିଚାର୍ଜ</string>
+    <string name="phone_number_or_email">ଫୋନ ନମ୍ବର କିମ୍ବା ଇମେଲ</string>
+    <string name="battery_low_message">ବ୍ୟାଟେରୀ ସବୁବେଳେ 20% ରୁ ଅଧିକ ରଖନ୍ତୁ ରାଇଡ଼ ଆକସେପ୍ଟ ପାଇଁ ! ତେଣୁ ସବୁବେଳେ ଚାର୍ଜରେ ରଖନ୍ତୁ!</string>
+    <string name="Rate_Your_Customer">କସ୍ଟମର କୁ ସ୍ଟାର ଦିଅନ୍ତୁ</string>
+    <string name="skip">ଆଗକୁ ବଢନ୍ତୁ</string>
+    <string name="destination_menu">ଡେସ୍ଟିନେସନ</string>
+    <string name="phone">ଫୋନ :</string>
+    <string name="GENERATE_OTP">ଓଟିପି ପ୍ରସ୍ତୁତି</string>
+    <string name="otp">ଓଟିପି</string>
+    <string name="destination">ଡେସ୍ଟିନେସନ</string>
+    <string name="destination_selection">ଦୟାକରି ବର୍ତମାନ ଆପଣ ଡେସଟିନେସନ ସିଲେକ୍ଟ କରନ୍ତୁ ଯୋଉଠିକି ଯିବେ</string>
+    <string name="Payments">ପେମେଣ୍ଟ ଗୁଡିକ</string>
+    <string name="Today">ଆଜି</string>
+    <string name="Last_week">ଶେସ ସପ୍ତାହ</string>
+    <string name="Last_month">ଶେସ ମାସ</string>
+    <string name="jugnoo_cmsn">ଜୁଗ୍ଣୁ କମିସନ</string>
+    <string name="referral_amount">ରେଫରାଲ ପଇସା</string>
+    <string name="phone_deduction">ଫୋନ ପଇସା କଟିଛି</string>
+    <string name="paid_by_jugnoo">ଜୁଗ୍ଣୁ ଦ୍ବାରା ପେମେଣ୍ଟ</string>
+    <string name="paid_by_customer">କ୍ୟାସ ପେମେଣ୍ଟ</string>
+    <string name="paid_using_wallet">ଫ୍ରୀ ବାଲାନ୍ସ ଦ୍ବ୍ୟାରା ପେମେଣ୍ଟ</string>
+    <string name="acc_credited">ପଇସା ପାଇଛନ୍ତି</string>
+    <string name="last_invoice_details">ଶେସ ପେମେଣ୍ଟ ହେଇଥିଲା</string>
+    <string name="last_payments">ଶେସ ପେମେଣ୍ଟ ଗୁଡିକ</string>
+    <string name="upcoming_payment_due_date">ପରବର୍ତୀ ପେମେଣ୍ଟ ହବ</string>
+    <string name="cash_via_paytm">କ୍ୟାସ ପେଟିଏମ ଦ୍ବ୍ୟାରା</string>
+    <string name="cash_needed_text">କ୍ୟାସ ଦରକାର୍: ଟଂକା</string>
+    <string name="convenience_charges_text">ଗ୍ରାହକ ପାଇଁ ସୁବିଧା ମୁଲ୍ୟ:</string>
+    <string name="not_recived_otp">ମୁଁ ଓଟିପି ଗ୍ରହଣ କରିନାହିଁ</string>
+    <string name="please_reach">ଦୟାକରି ପହଂଚନ୍ତୁ</string>
+    <string name="ride_time2">ଭଡ଼ା ସମୟ</string>
+    <string name="rate">ମୁଲ୍ୟ</string>
+    <string name="time_new">ସମୟ</string>
+    <string name="Scheduled_Ride_Pickup">ଅନୁସୁଚିତ ଭଡ଼ା ପିକ୍-ଅପ୍</string>
+    <string name="Edit_profile">ପ୍ରୋଫାଇଲ୍ ଏଡିଟ୍ କରନ୍ତୁ</string>
+    <string name="info">ବ୍ୟକ୍ତିଗତ ସୁଚନା</string>
+    <string name="data_effective_format">ତଥ୍ୟ ପ୍ରଭାବିତ ହେବ</string>
+    <string name="terms">ନିୟମ</string>
+    <string name="bank_details">ବ୍ୟାଂକ୍ ବିବରଣି</string>
+    <string name="acc_no">ଖାତା ସଂକ୍ଷା:</string>
+    <string name="ifsc_code">ଆଇଏଫ୍-ଏସ୍-ସି</string>
+    <string name="bank_name">ବ୍ୟାଂକ୍ ର ନାମ</string>
+    <string name="bank_loc">ବ୍ୟାଂକ୍ ର ସ୍ତାନ</string>
+    <string name="customer_waiting">ଆପଣଂକର ପରବର୍ତି ଗ୍ରାହକ ଅପେକ୍ଷା କରିଛନ୍ତି</string>
+    <string name="show_more">ଆହୁରି ଦେଖାନ୍ତୁ</string>
+    <string name="Transactions">ନେଣଦେଣ</string>
+    <string name="Invoices">ଚାଲାଣ</string>
+    <string name="Earn">ଆୟ</string>
+    <string name="Activity">ଗତିବିଧି</string>
+    <string name="referral">ରେଫରାଲ୍</string>
+    <string name="NA">ଲାଗୁ ନାହିଁ</string>
+    <string name="Invoice">ଚାଲାଣ</string>
+    <string name="Ride">ଭଡ଼ା</string>
+    <string name="customer_id">ଗ୍ରାହକ ଆଇଡି</string>
+    <string name="paytm_transaction">ପେଟିଏମ୍ ନେଣଦେଣ</string>
+    <string name="phone_no">ଫୋନ୍ ନମ୍ବର୍</string>
+    <string name="changed_no_same_as_previous">ବଦଳିଥିବା ଫୋନ୍ ନମ୍ବର୍ ପଛ ନମ୍ବର୍ ଭଳି ଅଛି</string>
+    <string name="start_loc">ପ୍ରାଥମିକ ସ୍ଥାନ</string>
+    <string name="driver_loc">ଡ୍ରାଇଭର୍ ସ୍ଥାନ</string>
+    <string name="customer_2">ଗ୍ରାହକ 2</string>
+    <string name="kms">କିଲୋମିଟର</string>
+    <string name="mark_delivered">ଦିଆଜାଇଥିବା ଚିହ୍ନଟ କରନ୍ତୁ</string>
+    <string name="order_id">ଆଦେଶ ଆଇଡି</string>
+    <string name="thanks_for_feedback">ଆପଣଂକର ବହୁମୁଲ୍ୟ ପ୍ରତିକ୍ରିୟା ପାଇଁ ଧନ୍ୟବାଦ୍</string>
+    <string name="total_amnt_till_now">ଏପର୍ଯ୍ୟନ୍ତ ସର୍ବମୋଟ୍ ମୁଲ୍ୟ</string>
+    <string name="invoice_date">ଚାଲାଣ ର ତାରିଖ</string>
+    <string name="invoice_id">ଚାଲାଣ ଆଇଡି</string>
+    <string name="total_distance">ସର୍ବମୋଟ୍ ଦୁରତା</string>
+
 </resources>
