--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/string.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/string.xml
@@ -94,6 +94,9 @@
     <string name="rank_overall">એકંદરે ક્રમ:</string>
     <string name="monthly">માસિક સ્કોર</string>
     <string name="earnings">કમાણી</string>
+    <string name="Earnings">કમાણી</string>
+
+
     <string name="rides_taken">સવારી લેવામાં </string>
     <string name="rides_missed">સવારી ચુક્યા </string>
     <string name="rides_cancelled">રદ્દ કરેલ સવારી </string>
@@ -121,5 +124,284 @@
     <string name="battery_level_text">રાઈડ સ્વીકારવા માટે બેટરી સ્તર કરતાં 20% કરતા વધારે હોવા જ જોઈએ . ચાર્જર કનેક્ટ કરો  .</string>
     <string name="battery_level_start_text">રાઈડ શરુ કરવા  માટે બેટરી સ્તર કરતાં 20% કરતા વધારે હોવા જ જોઈએ . ચાર્જર કનેક્ટ કરો  .</string>
     <string name="battery_level_arrived_text">રાઈડ આગમન  માટે બેટરી સ્તર કરતાં 20% કરતા વધારે હોવા જ જોઈએ . ચાર્જર કનેક્ટ કરો  .</string>
+
+    <string name="back">પાચળ </string>
+    <string name="change_phone_no_text">બદલેલો ફોને નો અંક એ જ છે જે પેલા હતા </string>
+    <string name="local_positon_text">સ્થાન ની માહિતી નથી મડી સકતી </string>
+    <string name="overall_position_text">સંપૂર્ણ  સ્થાન ની માહિતી નથી મળી સકતી </string>
+    <string name="cash_needed_text">રૂ .રોકડ ની જરૂરત છે </string>
+    <string name="convenience_charges_text">વ્યાજબી ભાવ</string>
+    <string name="code_empty">કોડે ખાલી ના રાખી સકાય </string>
+    <string name="confirm_email_text">ઈમૈલ -ઓળખ માન્ય નથી કરી રહી </string>
+    <string name="choose_email_client">ગ્રાહક માટે ઈ મેઈલ ઓળખ પસંદ કરો </string>
+    <string name="select_time_error_text">વર્ત્માન સમય કર્તા પહેલ નો સમય પસન્દ ન કરિ સકો </string>
+    <string name="call_me">મને ફોન કરો</string>
+    <string name="change_phone_no">ફોન અન્ક બદલ્સો</string>
+    <string name="creating_game">રમત ચાલુ રખ્સો </string>
+    <string name="completed">સમાપ્ત</string>
+    <string name="customer_name">ગ્રાહક નુ નામ</string>
+    <string name="change">બદલ્વુ</string>
+    <string name="km">કિ.મિ</string>
+    <string name="disable_mock_location">પ્રથમ કૃત્રિમ જગ્યા અક્ષમ કરો</string>
+    <string name="daily">પ્રતિદિન </string>
+    <string name="distance2">અન્તર</string>
+    <string name="discount">કટ</string>
+    <string name="enter_new_phone_no">નવા ફોન નંબર દાખલ કરો</string>
+    <string name="enter_fare">ભાડું દખલ કરો</string>
+    <string name="enter_otp">એક વખત નો પાસવર્ડ દાખલ કરો</string>
+    <string name="email">ઇમેઇલ</string>
+    <string name="fare1">ભાડું</string>
+    <string name="forgot_password_cap">પાસવર્ડ ભૂલી ગયા છો</string>
+    <string name="free_ride">મુક્ત રાઈડ</string>
+    <string name="final_amount">નક્કિ રકમ</string>
+    <string name="fare2">ભાડું</string>
+    <string name="fare_details">ભાડા વિગતો</string>
+    <string name="go_to_setting">સુયોજિત મા જાઓ</string>
+    <string name="google_pay_service_error">Google રમત સેવમા ભુલ છે</string>
+    <string name="google_pay_service_error_message">Google Play સેવાઓ મળી નથી અથવા જૂના | મહેરબાની કરીને સ્થાપિત કરો</string>
+    <string name="go_to_playstore">પ્લે દુકાન ની મુલાકાત લો</string>
+    <string name="help">મદદ</string>
+    <string name="have_arrived">તમે સુ અવિ ગયા છો?</string>
+    <string name="invite_earn">આમંત્રણ આપો અને કમાઓ</string>
+    <string name="create_new_account_msg">સુ તમે હજુ પણ એક નવું એકાઉન્ટ બનાવવા માંગો છો</string>
+    <string name="not_recived_otp">મને OTP મળેલ નથિ</string>
+    <string name="jugnoo_cash">Jugnoo રોકડ</string>
+    <string name="jugnoo">Jugnoo</string>
+    <string name="jugnoo_off">Jugnoo હવે બંધ છે.</string>"
+    <string name="jugnoo_cut">Jugnoo કટ</string>"
+    <string name="loading">લોડ કરી રહ્યું છે ...</string>
+    <string name="local_position">સ્થાનિક સ્થિતિ</string>
+    <string name="location_setting">સ્થાન સેટિંગ્સ</string>
+    <string name="location_setting_enable_message">સ્થાન સક્રિય થયેલ નથી . તમે સેટિંગ્સ મેનુ માંથી તેને સક્રિય કરવા માંગો છો?</string>
+    <string name="luggage_charge">સમાન નુ ભાઙૂ</string>
+    <string name="login">પ્રવેશ</string>
+    <string name="restart_phone">તમારો ફોન ફરીથી શરુ કરો</string>
+    <string name="money_to_take">પૈસા લેવા માટે રૂ</string>
+    <string name="min_fare">ન્યુનત્તમ ભાઙૃ</string>
+    <string name="meals_on">ભોજન પર</string>
+    <string name="mail_us">અમ્ને ઇ મેલ કરો</string>
+    <string name="message">સંદેશ</string>
+    <string name="no">નથી</string>
+    <string name="yes">હા</string>
+    <string name="no_luggage">કોઈ માલ ઉમેરવામાં આવ્યાે નથિ</string>
+    <string name="luggage_added">માલ સામાન માવસ્તુઓ ઉમેર્વા મા અવિ છે</string>
+    <string name="no_lugage">કોઇ માલ સામાન નથો</string>
+    <string name="network_problem">નેટવર્ક સમસ્યા. બંધ કરો અને તમારા ફોન પર સ્વિચ કરો અને Jugnoo ઉપયોગ ચાલુ રાખવા માટે 5 મિનિટ માટે કૃપા કરીને રાહ જુઓ.</string>
+    <string name="no_data_to_show">કોઈ ડેટા દર્શાવતું  નથી </string>
+    <string name="no_cash">નો રોકડ </string>
+    <string name="no_of_rides">સવારી સંખ્યા</string>
+    <string name="name">નામ</string>
+    <string name="name_colon">નામ:</string>
+    <string name="overall_position">એકંદર સ્થિતિ</string>
+    <string name="of_upto_100">ના રૂ. 100 / -</string>
+    <string name="some_amount">અમુક રકમ દાખલ કરો</string>
+    <string name="less_amount">ઓછી રકમ દાખલ કરો</string>
+    <string name="valid_amount">માન્ય રકમ દાખલ કરો</string>
+    <string name="Phone_number_not_empty">ફોન નંબર ખાલી ન હોઈ શકે</string>
+    <string name="valid_phone_number">માન્ય ફોન નંબર દાખલ કરો</string>
+    <string name="please_wait">મહેરબાની કરી રાહ જુવો ...</string>
+    <string name="enter_some_fare">અમુક ભાડું દાખલ કરો</string>
+    <string name="please_reach">સંપર્ક કરો</string>
+    <string name="by">દ્વારા</string>
+    <string name="take_fare_from_customer">કૃપા કરીને ભાડું ગ્રાહક પાસેથી ઉપર બતાવ્યા પ્રમાણે લેવું </string>
+    <string name="enter_name">નામ દાખલ કરો</string>
+    <string name="Pls_enter_email_or_phn">ઇમેઇલ અથવા ફોન નંબર દાખલ કરો</string>
+    <string name="confirm_email">કૃપા કરીને ઇમેઇલ આઈડી ખાતરી કરો</string>
+    <string name="pls_enter_phone_number">ફોન નંબર દાખલ કરો</string>
+    <string name="enter_valid_phone_number">માન્ય ફોન નંબર દાખલ કરો</string>
+    <string name="enter_password">પાસવર્ડ દાખલ કરો</string>
+    <string name="pls_confirm_password">માન્ય પાસવર્ડ દાખલ કરો</string>
+    <string name="password_atleast_6">પાસવર્ડ ઓછામાં ઓછો છ અક્ષરો હોવા જ જોઈએ</string>
+    <string name="valid_email">માન્ય ઇમેઇલ  દાખલ કરો</string>
+    <string name="password_not_match">પાસવર્ડ મેળ ખાતા નથી</string>
+    <string name="password_to_continue">ચાલુ રાખવા માટે પાસવર્ડ દાખલ કરો.</string>
+    <string name="enter_new_phone_number">તમારા નવા ફોન નંબર દાખલ કરો</string>
+    <string name="position">સ્થિતિ</string>
+    <string name="enter_phone_to_have_instruction">તમારો પાસવર્ડ રીસેટ કરવા માટે સૂચનો મેળવવા માટે તમારા ફોન નંબર આપો.</string>
+    <string name="pay">ચુકવણી</string>
+    <string name="please_login_from_these_accounts">કૃપા કરીને એક એકાઉન્ટ્સ  મારફતે પ્રવેશ કરો</string>
+    <string name="please_contact_customer_care">અમારા ગ્રાહક કેન્દ્ર સંપર્ક કરો</string>
+    <string name="paid_cash">રોકડ માં ચુકવણી </string>
+    <string name="ride_id">રાઇડ ID </string>
+    <string name="Ride_id">રાઇડ ID </string>
+    <string name="rupees">રૂ.</string>
+    <string name="ride_time2">રાઇડ સમય</string>
+    <string name="rate">દર:</string>
+    <string name="ride_in_progress_cant_logout">રાઈડ પ્રગતિ માં છે. જયારે તમે રાઈડ પૂરી કરશો ત્યારે લોગ ઓઉટ થશે</string>
+    <string name="rate_applied">દર લાગુ</string>
+    <string name="register">નોંધણી</string>
+    <string name="request_registration">વિનંતી રજીસ્ટ્રેશન</string>
+    <string name="reg_info">નોંધણી માહિતી</string>
+    <string name="ride_details">રાઈડ વિગતો</string>
+    <string name="ride_fare">રાઈડ ભાડું</string>
+    <string name="can_not_calculated_distance">માફ કરશો, અમે અત્યારે તમારી અંતર ગણતરી કરી શકતા નથી</string>
+    <string name="set">સેટ</string>
+    <string name="SUBMIT">રજૂ કરવું</string>
+    <string name="super_driver">સુપર ડ્રાઇવરો</string>
+    <string name="sharing_rides">રાઇડ્સ શેરિંગ</string>
+    <string name="sharing_on"> શેરિંગ ON</string>
+    <string name="SIGN_UP">સાઇન અપ કરો</string>
+    <string name="submit_request">વિનંતિ સબમિટ</string>
+    <string name="status">સ્થિતિ</string>
+    <string name="total_time">કુલ સમય</string>
+    <string name="app_need_active_gps">એપ્લિકેશન સક્રિય જીપીએસ જોડાણ કરવાની જરૂર છે. સેટિંગ્સ સક્ષમ કરો.</string>
+    <string name="app_needs_network_time">એપ્લિકેશન નેટવર્ક પૂરી પાડવામાં સમય સક્રિય કરવાની જરૂર છે. સેટિંગ્સ સક્ષમ કરો.</string>
+    <string name="take">લેવું</string>
+    <string name="req_accepted_by_other_driver">આ વિનંતી અન્ય ડ્રાઈવર દ્વારા સ્વીકારવામાં આવ્યું છે</string>
+    <string name="amount_entered">રકમ દાખલ છે</string>
+    <string name="time">સમય</string>
+    <string name="time_new">નવો સમય</string>
+    <string name="jugnoo_ride_over">જુગનૂ રાઈડ પૂરી થઇ ગઈ છે.</string>
+    <string name="today">આજે</string>
+    <string name="this_month">આ મહિને</string>
+    <string name="title">શીર્ષક</string>
+    <string name="two_account_on_device">બે એકાઉન્ટ્સ પહેલાથી જ આ ઉપકરણ પર બનાવવામાં આવી છે</string>
+    <string name="total_fare">કુલ ભાડુ</string>
+    <string name="updating">સુધારી રહ્યા છીએ ...</string>
+    <string name="user_cancel_request">વપરાશકર્તા વિનંતી રદ કરી છે</string>
+    <string name="verification">ચકાસણી</string>
+    <string name="verify_me">મને ચકાસો</string>
+    <string name="waiting_for_location">સ્થાન માટે રાહ જુએ છે ...</string>
+    <string name="wait">રાહ જુઓ</string>
+    <string name="whatsapp_not_installed">WhatsApp સ્થાપિત થયેલ નથી</string>
+    <string name="weekly">અઠવાડિક</string>
+    <string name="will_revert_you">અમે ટૂંક સમયમાં તમે ઉમેરાઇ જશે</string>
+    <string name="cannot_add_less_than">તમે રકમ કરતાં ઓછી એ \ n રૂ ઉમેરી શકો છો.</string>
+    <string name="your_position">તમારી પરિસ્થિતિ</string>
+    <string name="your_overall_position">તમારી એકંદર સ્થિતિ</string>
+    <string name="got_new_request">તમે એક નવી રાઈડ ની  વિનંતી મળી છે.</string>
+    <string name="present_near_customer_location">રાઈડને અરાઇવ્ડ કરવાં માટે તમે ગ્રાહકની પીક અપ લોકેશન પર હાજર </string>
+    <string name="present_near_customer_location_to_start">રાઈડને  શરુ કરવાં માટે તમે ગ્રાહકની પીક અપ લોકેશન પર હાજર </string>
+    <string name="You_have_already_created">તમે પહેલાથી જ આ ઉપકરણ માં % 1d એકાઉન્ટ્સ બનાવ્યા  છે. એક નવું એકાઉન્ટ બનાવવા માટે કારણ સમજાવો.</string>
+    <string name="your_referral_code">આપનો રેફરલ કોડ છે </string>
+    <string name="tap_to_retry">ફરીથી પ્રયાસ કરવા માટે સ્ક્રીન ને સ્પર્શ કરો </string>
+    <string name="error_occured_tap_to_retry">કોઈ ભૂલ થઈ છે ફરીથી પ્રયાસ કરવા માટે સ્ક્રીન ને સ્પર્શ કરો </string>
+    <string name="no_missed_rides">હાલમાં કોઈ સવારી ચુક્યા નથી </string>
+    <string name="no_internet_tap_to_retry">કોઈ ઈન્ટરનેટ કનેકશન નથી ફરીથી પ્રયાસ કરવા માટે સ્ક્રીન ને સ્પર્શ કરો </string>
+    <string name="no_rides">હાલમાં કોઈ સવારી નથી </string>
+    <string name="pickup_location">આપનું પીકઅપ સ્થળ </string>
+    <string name="money_to_pay">પૈસા ચુકવવા માટે રૂ/-</string>
+    <string name="money_to">જુગનૂ માટે પૈસા </string>
+    <string name="start_ride_loc">રાઈડ સ્થળથી શરુ  </string>
+    <string name="sec_left">સેકંડ બાકી </string>
+    <string name="km_away">કિમી દુર </string>
+    <string name="m_away">મી દુર </string>
+    <string name="some_error_occured">કોઈ ભૂલ થઇ છે</string>
+    <string name="take_cash">રોકડા લો </string>
+    <string name="wallet">બટવો </string>
+    <string name="Scheduled_Ride_Pickup">અનુસૂચિત રાઈડ પીકઅપ </string>
+    <string name="referral_msg">મારા કોડનો ઉપયોગ કરીને જુગનૂ  ગ્રાહક એપ્લીકેશન ડાઉનલોડ કરો અને જુગનૂ કેશ કમાવો અહિયાથીડાઉનલોડકરો  http://smarturl.it/jugnoo</string>
+    <string name="no_of_account">આ ઉપકરણમાં ખાતું પેહલાથી જ બનાવેલું છે </string>
+    <string name="enter_otp_received">એસએમએસ મારફતે પ્રાપ્ત કરેલો વન ટાઇમ પાસવર્ડ દાખલ કરો </string>
+    <string name="select_reason">કૃપા કરીને એક કારણ પસંદ કરો </string>
+    <string name="referral_money">રેફરલ મની </string>
+    <string name="send">મોકલો </string>
+    <string name="wait_here">અહિયાં રાહ જુઓ </string>
+    <string name="use_jugnoo_fare">જુગનૂ ભાડાનો ઉપયોગ કરો </string>
+    <string name="view_account">ખાતું જુઓ </string>
+    <string name="hint_created_multiple_account">તમે પહેલાથી જ આ ઉપકરણ માં બે એકાઉન્ટ્સ બનાવ્યા છે. એક નવું એકાઉન્ટ બનાવવા માટે કારણ સમજાવો.</string>
+    <string name="convenience_charge">સગવડ ચાર્જ </string>
+    <string name="inc_subsidy">સબસીડી ની સાથે </string>
+    <string name="to_end">માટે </string>
+    <string name="Edit_profile">પ્રોફાઈલ એડિટ કરો </string>
+    <string name="info">માહિતી </string>
+    <string name="local_leaderboard">સ્થાનિક </string>
+    <string name="global_leaderboard">વૈશ્વિક</string>
+    <string name="daily_leaderboard">દૈનિક </string>
+    <string name="weekly_leaderboard">અઠવાડિક</string>
+    <string name="lb_rank">ક્રમ</string>
+    <string name="lb_name">નામ </string>
+    <string name="lb_no_downloads">ડાઉનલોડ ની સંખ્યા </string>
+    <string name="number_of_downloads">ડાઉનલોડ ની સંખ્યા </string>
+    <string name="number_of_first_rides">લીધેલી પ્રથમ સવારીની સંખ્યા </string>
+    <string name="money_earned">રેફરલ દ્વારા કમાવેલ પૈસા </string>
+    <string name="data_effective_format">અસરકારક માહિતી</string>
+    <string name="notifications">સુચાનાકેન્દ્ર</string>
+    <string name="click_for_direction">દિશાઓ માટે અહિયાં ક્લિક કરો </string>
+    <string name="time_left">સમય બાકી </string>
+    <string name="enter_phone_no_to_reset_password">તમારો પાસવર્ડ રીસેટ કરવા માટે તમારી રજીસ્ટર ફોન નંબર દાખલ કરો.</string>
+    <string name="customer_phone_number">ગ્રાહકનો ફોન નંબર </string>
+    <string name="recharge_amount">રિચાજૅ કર્વા માટે નિ રાશિ</string>
+    <string name="enter_amount">રકમ દાખલ કરો </string>
+    <string name="paytm_recharge">પેટીએમ રીચાર્જ </string>
+    <string name="Confirm">ખાતરી </string>
+    <string name="Paytm_recharge">પેટીએમ રીચાર્જ </string>
+    <string name="phone_number_or_email">ફોન નંબર  અથવા ઈ -મેલ </string>
+    <string name="nl_otp_waiting_to_detect_otp">આપમેળે OTP શોધવા માટે રાહ જુએ છે</string>
+    <string name="battery_low_message">બેટરી સ્તર કરતાં વધારે 20% રાઈડ સ્વીકારી હોવા જ જોઈએ. એક શક્તિ સ્ત્રોત માટે પ્લગઇન ચાલુ રાખવા માટે.</string>
+    <string name="Rate_Your_Customer">ગ્રાહકનું મૂલ્યાંકન કરો </string>
+    <string name="skip">છોડો </string>
+    <string name="destination_menu">સ્થળો </string>
+    <string name="no_current_notification">હાલમાં કોઈ સુચના નથી </string>
+    <string name="phone">ફોન </string>
+    <string name="GENERATE_OTP">ઓ ટી પી  બનાવો </string>
+    <string name="otp">ઓ ટી પી </string>
+    <string name="signin_via_otp">ઓ ટી પી દ્વારા સાઈન ઇન કરો </string>
+    <string name="Neutral">તટસ્થ</string>
+    <string name="destination">સ્થળો </string>
+    <string name="destination_selection">કૃપા કરીને લક્ષ્ય સ્થાન પસંદ કરો જ્યાં તમે હમણાં જઈ શકો </string>
+    <string name="Payments">ચુકવણીઓ</string>
+    <string name="PAYMENTS">ચુકવણીઓ</string>
+
+    <string name="Today">આજે </string>
+    <string name="Last_week">ગયા સપ્તાહે</string>
+    <string name="Last_month">ગયા મહિને</string>
+    <string name="upcoming_invoice">આવનારું બીલ </string>
+    <string name="current_invoice">હાલનું બીલ</string>
+    <string name="Outstanding_amnt">બાકી રકમ </string>
+    <string name="jugnoo_cmsn">જુગનૂ કમીશન </string>
+    <string name="Manual_adjustment">મેન્યુઅલ એડજસ્ટમેન્ટ </string>
+    <string name="referral_amount">રેફરલની રકમ </string>
+    <string name="cancel_subsidy">કેન્સલ થયેલ રાઈડની સબસીડી </string>
+    <string name="phone_deduction">ફોન કપાત </string>
+    <string name="paid_by_jugnoo">જુગનૂ દ્વારા ચૂકવેલ </string>
+    <string name="paid_by_customer">રોકડમાં ચુકવણી </string>
+    <string name="paid_using_wallet">વોલેટનો  ઉપયોગ કરીને ચુકવણી કરો </string>
+    <string name="acc_credited">રકમ જમા </string>
+    <string name="last_invoice">પાછલું બીલ</string>
+    <string name="last_invoice_details">છેલ્લા ચુકવણી પર:</string>
+    <string name="last_payments">છેલ્લા ચુકવણીઓ</string>
+    <string name="upcoming_payment_due_date">આગામી ચુકવણી:</string>
+    <string name="cash_via_paytm">પેટીએમ દ્વારા કેશ </string>
+    <string name="terms">શરતો </string>
+    <string name="bank_details">બેંકની  માહિતી </string>
+    <string name="acc_no">ખાતાનો નંબર </string>
+    <string name="ifsc_code">IFSC કોડ </string>
+    <string name="bank_name">બેંકનું નામ</string>
+    <string name="bank_loc">બેંકનું  સ્થાન </string>
+    <string name="customer_waiting">તમારો  આગામી ગ્રાહક રાહ જોઈ રહ્યો  છે</string>
+    <string name="show_more">વધુ બતાવો </string>
+    <string name="Transactions">લેવડ-દેવળ </string>
+    <string name="Invoices">બીલ </string>
+    <string name="Earn">કમાઓ</string>
+    <string name="Activity">પ્રવૃત્તિ</string>
+    <string name="referral">રેફરલ </string>
+    <string name="NA">લાગુ નથી </string>
+    <string name="Invoice">બીલ </string>
+    <string name="Ride">સવારી </string>
+    <string name="customer_id">ગ્રાહકની આઈ ડી </string>
+    <string name="paytm_transaction">પેતિએમની  લેવડ-દેવળ </string>
+    <string name="phone_no">ફોન નંબર </string>
+    <string name="changed_no_same_as_previous">બદલેલ ફોન નંબર અને પાછલો નંબર એકજ છે </string>
+    <string name="sharing_payment_recieved">ફોન શેરિંગ માટે ચૂકવણી મેળલ</string>
+    <string name="please_give_customer">અમે તમારા પ્રતિભાવ ગંભીરતાથી લઈએ છીએ . અમને રેટિંગ આપો</string>
+    <string name="start_loc">પ્રારંભ સ્થાન</string>
+    <string name="driver_loc">ડ્રાઈવર સ્થાન</string>
+    <string name="customer_2">ગ્રાહક 2</string>
+    <string name="kms">કિલોમીટર </string>
+    <string name="mark_delivered">માર્ક વિતરિત</string>
+    <string name="order_id">ઓર્ડર ID</string>
+    <string name="thanks_for_feedback">તમારા મૂલ્યવાન પ્રતિભાવ માટે આભાર</string>
+    <string name="total_amnt_till_now">અત્યાર સુધીની  કુલ રકમ</string>
+    <string name="invoice_date">બીલની તારીખ </string>
+    <string name="invoice_id">બીલની આઈ ડી </string>
+    <string name="total_distance">કુલ અંતર</string>
+    <string name="valid_email_phone_no">માન્ય ઇ-મેઇલ અથવા ફોન નંબર દાખલ કરો</string>
+    <string name="select_destination">કૃપા કરીને ઓછામાં ઓછી એક ગંતવ્ય પસંદ</string>
+    <string name="fatafat_on">ફટાફટ શરુ </string>
+    <string name="Notifications">સૂચનાઓ </string>
+    <string name="enter_customer_phone_no">ગ્રાહકનો ફોન નંબર દાખલ કરો</string>
+    <string name="invoice_detail">ભરન નિ જાનકારિ</string>
+
 
 </resources>
